--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jun 05 2025 10:34:53 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Jun 16 2025 06:06:11 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68287ed9bc98a5225daab4b9" data-wf-site="68287ed9bc98a5225daab455">
 <head>
   <meta charset="utf-8">
-  <title>大分の女性へ―真剣な出会いも恋活も！恋活・婚活アプリ徹底比較【2025年最新版】</title>
+  <title>【2025年最新版】大分の女性へ―真剣な出会いも恋活も！恋活・婚活アプリ徹底比較</title>
   <meta content="大分の女性向けに、恋活・婚活アプリをリアル目線で徹底比較。地元限定のONiTや、ペアーズ・withなど人気アプリの特徴や安全性、口コミ・体験談も紹介。無理なく自分のペースで“ちょっといい出会い”を増やしたい方に。2025年最新、大分で本当に使える恋活・婚活情報ガイド。" name="description">
-  <meta content="大分の女性へ―真剣な出会いも恋活も！恋活・婚活アプリ徹底比較【2025年最新版】" property="og:title">
+  <meta content="【2025年最新版】大分の女性へ―真剣な出会いも恋活も！恋活・婚活アプリ徹底比較" property="og:title">
   <meta content="大分の女性向けに、恋活・婚活アプリをリアル目線で徹底比較。地元限定のONiTや、ペアーズ・withなど人気アプリの特徴や安全性、口コミ・体験談も紹介。無理なく自分のペースで“ちょっといい出会い”を増やしたい方に。2025年最新、大分で本当に使える恋活・婚活情報ガイド。" property="og:description">
   <meta content="https://cdn.prod.website-files.com/68287ed9bc98a5225daab455/68414472d34f98defaff7904_opengraphimage.jpg" property="og:image">
-  <meta content="大分の女性へ―真剣な出会いも恋活も！恋活・婚活アプリ徹底比較【2025年最新版】" property="twitter:title">
+  <meta content="【2025年最新版】大分の女性へ―真剣な出会いも恋活も！恋活・婚活アプリ徹底比較" property="twitter:title">
   <meta content="大分の女性向けに、恋活・婚活アプリをリアル目線で徹底比較。地元限定のONiTや、ペアーズ・withなど人気アプリの特徴や安全性、口コミ・体験談も紹介。無理なく自分のペースで“ちょっといい出会い”を増やしたい方に。2025年最新、大分で本当に使える恋活・婚活情報ガイド。" property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -31,7 +31,7 @@
       "@type": "WebSite",
       "@id": "https://oita-deai-labo.github.io/#website",
       "url": "https://oita-deai-labo.github.io/",
-      "name": "大分の女性へ――真剣な出会いも恋活も！恋活・婚活アプリ徹底比較【2025年最新版】",
+      "name": "【2025年最新版】大分の女性へ――真剣な出会いも恋活も！恋活・婚活アプリ徹底比較",
       "inLanguage": "ja",
       "publisher": {
         "@id": "https://oita-deai-labo.github.io/#organization"
@@ -41,7 +41,7 @@
       "@type": "WebPage",
       "@id": "https://oita-deai-labo.github.io/#webpage",
       "url": "https://oita-deai-labo.github.io/",
-      "name": "大分の女性へ――真剣な出会いも恋活も！恋活・婚活アプリ徹底比較【2025年最新版】",
+      "name": "【2025年最新版】大分の女性へ――真剣な出会いも恋活も！恋活・婚活アプリ徹底比較",
       "isPartOf": {
         "@id": "https://oita-deai-labo.github.io/#website"
       },
@@ -175,7 +175,7 @@
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation-bar w-nav">
       <div class="w-container">
         <a href="#" class="logo-link w-nav-brand">
-          <h1 class="logo-text">大分の女性へ――真剣な出会いも恋活も！恋活・婚活アプリ徹底比較【2025年最新版】</h1>
+          <h1 class="logo-text">【2025年最新版】大分の女性へ――真剣な出会いも恋活も！恋活・婚活アプリ徹底比較</h1>
         </a>
         <nav role="navigation" class="navigation-menu w-nav-menu">
           <p class="main-subheading w-hidden-medium w-hidden-small w-hidden-tiny">大分で恋人探し・婚活をしたい女性向けに、“本当に安心して使える”人気マッチングアプリやリアル出会いスポット、地元限定の婚活イベントもまるごと紹介します</p>
